[package]
name = "renode-run"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Run embedded programs in the renode emulator"
categories = ["command-line-utilities", "embedded", "no-std"]
keywords = ["cargo-runner", "renode"]
authors = ["Jon Lamb"]
repository = "https://github.com/jonlamb-gh/renode-run"

[dependencies]
log = "0.4"
env_logger = "0.11"
cargo_metadata = "0.19.2"
cargo_toml = "0.22"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.1", features = ["derive", "env", "color"] }
regex = "1.7"
lazy_static = "1.4"
unindent = "0.2"
indent = "0.1"
tempfile = "3.4"
thiserror = "2.0"
derive_more = {version = "2.0", features = ["display", "error", "deref", "as_ref", "into"]}
